--- a/hooks/uglify-config.json
+++ b/hooks/uglify-config.json
@@ -1,25 +1,21 @@
 {
-  "alwaysRun": true,
-  "recursiveFolderSearch": true,
-  "foldersToProcess": [
-    "js",
-    "css",
-    "build"
-  ],
-  "uglifyJsOptions":
-  {
-    "compress":
-    {
-      "drop_console": false
+    "alwaysRun": true,
+    "recursiveFolderSearch": true,
+    "foldersToProcess": [
+        "js",
+        "css",
+        "build"
+    ],
+    "uglifyJsOptions": {
+        "compress": {
+            "drop_console": true
+        },
+        "mangle": false,
+        "output": {
+            "code": true
+        }
     },
-    "mangle": false,
-    "output":
-    {
-      "code": true
+    "cleanCssOptions": {
+        "specialComments": "all"
     }
-  },
-  "cleanCssOptions":
-  {
-    "specialComments": "all"
-  }
 }
