--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "cordova-plugin-console": "~1.0.4",
+    "cordova-plugin-device": "~1.1.3",
+    "cordova-plugin-splashscreen": "~3.1.0",
+    "cordova-plugin-statusbar": "~2.1.3",
+    "cordova-plugin-whitelist": "~1.2.2",
     "gulp-order": "^1.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0",
-    "cordova-plugin-device": "~1.1.3",
-    "cordova-plugin-console": "~1.0.4",
-    "cordova-plugin-whitelist": "~1.2.2",
-    "cordova-plugin-splashscreen": "~3.1.0",
-    "cordova-plugin-statusbar": "~2.1.3",
-    "ionic-plugin-keyboard": "~2.2.1"
+    "ionic-plugin-keyboard": "~2.2.1",
+    "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
